@@ -25,6 +25,7 @@ source "$APPSDIR/examples/modbus/Kconfig"
 source "$APPSDIR/examples/mount/Kconfig"
 source "$APPSDIR/examples/mtdpart/Kconfig"
 source "$APPSDIR/examples/nettest/Kconfig"
+source "$APPSDIR/examples/nrf24l01_term/Kconfig"
 source "$APPSDIR/examples/nsh/Kconfig"
 source "$APPSDIR/examples/null/Kconfig"
 source "$APPSDIR/examples/nx/Kconfig"
